--- a/less/mo_style_main.less
+++ b/less/mo_style_main.less
@@ -2209,6 +2209,7 @@ body {
                         margin-right: 5px;
                         margin-left: 5px;
                         vertical-align: middle;
+                        position: relative;
                         @media@mediaVericalMobile {
                             width: 160px;
                             height: 160px;
@@ -2246,6 +2247,8 @@ body {
                             font-size: 1rem;
                             color: #444;
                             margin-bottom: 5px;
+                            width: 80%;
+                            margin: 0 auto;
                             @media@mediaVericalMobile {
                                 font-size: 0.75rem;
                                 margin-top: 15px;
@@ -2264,12 +2267,16 @@ body {
                             cursor: pointer;
                             width: 120px;
                             height: 40px;
-                            margin: 30px auto;;
+                            margin: 0px auto;;
                             text-align: center;
                             line-height: 38px;;
                             border:2px solid #d0d0d0;
                             box-sizing: border-box;;
                             color: #444;
+                            position: absolute;
+                            bottom: 5px;
+                            left: 50%;
+                            transform: translateX(-50%);
                             @media@mediaVericalMobile {
                                 width: 100px;
                                 height: 35px;
