--- a/less/popup.less
+++ b/less/popup.less
@@ -113,13 +113,11 @@ body {
                     cursor: pointer;
                     width: 25%;
                     float: left;
-                    ;
                     height: 50px;
                     background: #f0f0f0;
                     border-right: 2px solid #222;
                     border-bottom: 2px solid #222;
                     box-sizing: border-box;
-                    ;
                     line-height: 50px;
                     color: #888;
 
@@ -148,9 +146,7 @@ body {
             div.ins_tabs {
                 width: 100%;
                 height: 280px;
-                ;
                 margin-top: 20px;
-                ;
                 text-align: left;
 
                 h3 {
@@ -161,10 +157,8 @@ body {
                 h3.result_compare {
                     text-align: left;
                     font-weight: bold;
-                    ;
                     font-size: 1.125rem;
                     margin-bottom: 10px;
-                    ;
                 }
 
                 h4 {
@@ -176,18 +170,14 @@ body {
                     width: 32%;
                     height: 45%;
                     background: white;
-                    ;
                     border: 1px solid #f0f0f0;
                     display: inline-block;
+                    vertical-align: middle;
                     margin-bottom: 10px;
-                    ;
                     margin-right: 20px;
-                    ;
                     border-radius: 5px;
-                    ;
                     padding-top: 25px;
                     box-sizing: border-box;
-                    ;
                     position: relative;
                     text-align: center;
 
@@ -210,8 +200,12 @@ body {
                         ;
                     }
 
-                    .p {
+                    p {
                         letter-spacing: -1px;
+                        font-size: 0.875rem;
+                        word-break: keep-all;
+                        width: 85%;
+                        margin: 0 auto;
 
                     }
                 }
@@ -360,13 +354,10 @@ body {
 
                                 div.text_area {
                                     width: 60%;
-                                    ;
                                     height: 100%;
                                     float: left;
                                     padding-left: 30px;
-                                    ;
                                     box-sizing: border-box;
-                                    ;
                                     padding-top: 25px;
                                     text-align: left;
 
@@ -375,12 +366,14 @@ body {
                                         color: #222;
                                         letter-spacing: -1px;
                                         word-break: keep-all;
+                                        font-size: 0.875rem;
 
                                     }
 
                                     p {
                                         color: #222;
                                         word-break: keep-all;
+                                        
                                     }
 
                                 }
@@ -391,7 +384,6 @@ body {
                                 height: 100%;
                                 float: left;
                                 box-sizing: border-box;
-                                ;
 
                             }
 
@@ -401,11 +393,8 @@ body {
                                 background: #f5f5f5;
                                 float: left;
                                 border-left: 1px solid #d0d0d0;
-                                ;
                                 border-right: 1px solid #d0d0d0;
-                                ;
                                 box-sizing: border-box;
-                                ;
                                 background-image: url(../img/popup/vs_img.png);
                                 .backgroundOption;
                                 background-size: 50px;
@@ -543,34 +532,31 @@ body {
                             height: 200px;
                             border-bottom: 1px solid #d0d0d0;
                             padding: 10px;
-                            ;
                             box-sizing: border-box;
-                            ;
 
                             div.illu_tab {
                                 width: 35%;
                                 height: 100%;
                                 background-image: url(../img/popup/illust.png);
-                                ;
                                 .backgroundOption;
                                 background-position: right;
                                 background-size: contain;
                                 float: left;
+                         
                             }
 
                             div.text_tab {
                                 width: 60%;
                                 float: left;
                                 height: 100%;
-                                ;
                                 padding: 15px;
                                 box-sizing: border-box;
                                 text-align: left;
-                                ;
 
                                 p {
                                     color: #444;
                                     margin-bottom: 5px;
+                                    font-size: 0.875rem;
                                 }
 
                                 div.consult_btn {
@@ -617,8 +603,10 @@ body {
                                 height: 100%;
                                 float: left;
                                 box-sizing: border-box;
-                                ;
                                 word-break: keep-all;
+                                p{
+                                    font-size: 0.875rem;
+                                }
 
 
                             }
@@ -629,11 +617,8 @@ body {
                                 background: #f5f5f5;
                                 float: left;
                                 border-left: 1px solid #d0d0d0;
-                                ;
                                 border-right: 1px solid #d0d0d0;
-                                ;
                                 box-sizing: border-box;
-                                ;
                                 background-size: 50px;
                                 position: relative;
 
@@ -656,8 +641,10 @@ body {
                                 height: 100%;
                                 float: left;
                                 box-sizing: border-box;
-                                ;
                                 word-break: keep-all;
+                                p{
+                                    font-size: 0.875rem;
+                                }
 
 
                             }
@@ -666,6 +653,9 @@ body {
 
                         div.character_data.bottom_data {
                             height: 90px;
+                            img{
+                                display: none;
+                            }
                         }
 
                         div.term_data.bottom_data {
