--- a/less/style_main.less
+++ b/less/style_main.less
@@ -1635,6 +1635,7 @@ body {
                         text-align: center;;
                         margin-right: 5px;
                         margin-left: 5px;
+                        position: relative;
                         
                         img.bedge{
                             width: 35px;
@@ -1650,24 +1651,26 @@ body {
                             margin: 0 auto;;
                         }
                         p{
-                            font-size: 1rem;
+                            width: 80%;
+                            margin: 0 auto;
+                            font-size: 0.875rem;
                             color: #444;
-                            margin-bottom: 5px;
-                            span{
-                                display: block;;
-                                margin-top: 5px;
-                            }
+                            word-break: keep-all;
+                            margin-top: 15px;
                         }
                         div.more_btn{
                             cursor: pointer;
                             width: 120px;
                             height: 40px;
-                            margin: 30px auto;;
                             text-align: center;
                             line-height: 38px;;
                             border:2px solid #d0d0d0;
                             box-sizing: border-box;;
                             color: #444;
+                            position: absolute;
+                            bottom: 20px;
+                            left: 50%;
+                            transform: translateX(-50%);
                         }
                         div.more_btn:hover{
                             background: @mainColor;
@@ -2475,23 +2478,15 @@ body {
                     border-radius: 5px;
                     margin-right: 5px;
                     margin-left: 5px;
-                    vertical-align: bottom;
-                    padding: 20px;
+                    vertical-align: top;
                     box-sizing: border-box;
                     border:1px solid #d0d0d0;
+                    line-height: 100px;
                     img{
-                        height: 25px;
+                        width: 60%;
+                        vertical-align: middle;
                     }
-                    p{
-                        width: 70%;
-                        position: absolute;
-                        font-size: 0.75rem;
-                        word-break: keep-all;
-                        line-height: 1rem;
-                        top: 50px;
-                        left: 50%;
-                        transform: translateX(-50%);
-                    }
+                 
                 }
                 .active{
                     background: white;
@@ -2565,6 +2560,13 @@ body {
                     color: #222;
                     font-size: 1.125rem;
                     font-weight: bold;
+                    span{
+                        color: @mainColor;
+                        display: inline;
+                        font-size: 1.125rem;
+                        margin: 0;
+
+                    }
                 }
 
                     span{
@@ -2725,15 +2727,31 @@ body {
         }
 
         div.product_desc{
+            h3{
+                font-weight: bold;
+            }
             h2{
                 font-size: 1.125rem;
                 font-weight: bold;
                 color: #222;
                 letter-spacing: -1px;
+                span{
+                    font-size: 0.75rem;
+                    margin-left: 10px;
+                }
                 img{
                     margin-right: 10px;
                     vertical-align: text-bottom;
                 }
+            }
+            p{
+                color: #444;
+                font-size: 0.875rem;
+                margin-top: 20px;
+                line-height: 1.6rem;
+                word-break: keep-all;
+                letter-spacing: -2px;
+
             }
         }
         div.tb_basic_contract{
@@ -2784,6 +2802,15 @@ body {
                         padding-right: 10px;
                     }
                 }
+            }
+            p{
+                color: #444;
+                font-size: 0.875rem;
+                margin-top: 20px;
+                span{
+                    color: @mainColor;
+                }
+
             }
             table.price_tb{
                 thead{
