--- a/less/mo_common.less
+++ b/less/mo_common.less
@@ -761,6 +761,11 @@ div#wrap{
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+    @media@mediaVericalMobile{
+        left: 0px;
+        top: 0px;
+    }
+
 }
 .container {
     display: block;
@@ -808,8 +813,8 @@ div#wrap{
     display: block;
 }
 .container .checkmark:after {
-    left: 9px;
-    top: 5px;
+    left: 5px;
+    top: 2px;
     width: 5px;
     height: 10px;
     border: solid white;
