--- a/less/popup.less
+++ b/less/popup.less
@@ -168,7 +168,7 @@ body {
                 div.ins_tab {
                     cursor: pointer;
                     width: 32%;
-                    height: 45%;
+                    height: 55%;
                     background: white;
                     border: 1px solid #f0f0f0;
                     display: inline-block;
@@ -192,9 +192,7 @@ body {
                     .icon_area {
                         width: 150px;
                         height: 40px;
-                        margin: 0px auto;
-                        ;
-                        margin-bottom: 10px;
+                        margin: 15px auto;
                         .backgroundOption;
                         background-size: contain;
                         ;
@@ -205,7 +203,7 @@ body {
                         font-size: 0.875rem;
                         word-break: keep-all;
                         width: 85%;
-                        margin: 0 auto;
+                        margin: 20px auto;
 
                     }
                 }
@@ -860,6 +858,17 @@ body {
                                 margin-left: 10px;
                                 ;
                             }
+                            b{
+                                width: 200px;
+                                font-size: 0.75rem;
+                                line-height: 1rem;
+                                display: block;
+                                position: absolute;
+                                right: -15px;
+                                top: 23px;
+                                word-break: keep-all;
+                                text-align: left;
+                            }
                         }
 
                         div.btn_area {
@@ -1061,6 +1070,9 @@ body {
                                         box-sizing: border-box;
                                         font-size: 0.875rem;
                                         overflow: hidden;
+                                        img{
+                                            display: none;
+                                        }
                                     }
                                 }
 
