--- a/less/style_main.less
+++ b/less/style_main.less
@@ -2820,6 +2820,7 @@ body {
                         padding-left: 0px;
                         color: #222;
                         font-weight: bold;
+                       
                     }
                 }
                 tbody{
@@ -2866,6 +2867,11 @@ body {
                     td:nth-child(3){
                         border-right: 1px solid #d0d0d0; 
                         padding-right: 0px;
+                    }
+                }
+                td{
+                    span{
+                        color: @mainColor;
                     }
                 }
             }
