--- a/less/mo_popup.less
+++ b/less/mo_popup.less
@@ -274,7 +274,6 @@ body {
                         background-size: contain;
                         @media@mediaVericalMobile {
                             width: 80%; 
-                            margin-bottom: 15px;
                             background-size: 55%;
 
                         }
@@ -289,6 +288,7 @@ body {
                         font-size: 0.75rem;
                         @media@mediaVericalMobile {
                             font-size: 0.75rem;
+                            word-break: normal;
                         }
 
 
@@ -1732,23 +1732,28 @@ body {
                                 text-align: left;
                                 font-size: 1rem;;
                                 margin-bottom: 10px;
+                                font-size: 0.875rem;;
                             }
                             p{
                                 text-align: left;
-                                font-size: 1rem;;
+                                font-size: 0.875rem;;
                                 margin-bottom: 5px;
                                 span{
-                          
+                                    font-size: 0.875rem;;
+                                    display: block;
                                     font-weight: bold;;
                                     color: @mainColor;
+                                    margin-top: 5px;
                                 }
                             }
                             h2.price{
                                 position: absolute;
                                 bottom: 20px;
                                 right: 20px;
+                                font-size: 1rem;;
+
                                 span{
-                                    font-size: 1.563rem;
+                                    font-size: 1rem;
                                     color: @mainColor;
                                     margin-right: 5px   ;
                                 }
@@ -1807,6 +1812,9 @@ body {
                                             box-sizing: border-box;
                                             font-size: 0.75rem;
                                             overflow: hidden;
+                                            img{
+                                                display: none;
+                                            }
                                         }
                                     }
         
@@ -2182,6 +2190,9 @@ body {
                         margin-top: 10px;
                         @media@mediaVericalMobile {
                             height: 100px;
+                            font-size: 0.75rem;
+                            padding-left: 5px;
+
                         }
                     }
 
